<resources>
    <string name="exit_button">Exit</string>
    <string name="login_button">Log In</string>
    <string name="UsernameTip">Username</string>
    <string name="PasswordTip">Password</string>
    <string name="api_error">Server response failed!</string>
    <string name="no_internet">No connection!</string>
    <string name="error">Error!</string>
    <string name="login_failed">Wrong username or password!</string>
    <string name="profile_icon">My Profile</string>
    <string name="trees_icon">Tree List</string>
    <string name="change_avatar">Change avatar</string>
    <string name="logout">Logout</string>
    <string name="failed_load_avatar">Failed to load avatar!</string>
    <string name="no_avatar_load">No avatar</string>
    <string name="need_permission">Need permission to do it!</string>
    <string name="error_upload">Upload failed!</string>
    <string name="tree_list_title">Your trees</string>
    <string name="welcome">WELCOME</string>
    <string name="person_name">Name</string>
    <string name="person_surname">Surname</string>
    <string name="card_children">Children</string>
    <string name="card_parents">Parents</string>
    <string name="card_siblings">Siblings</string>
    <string name="card_marriage">Marriage to</string>
    <string name="card_siblings_vertical">S\ni\nb\nl\ni\nn\ng\ns</string>
    <string name="card_marriage_vertical">M\na\nr\nr\ni\na\ng\ne\n \nt\no</string>
    <string name="warning_tree_empty">Tree is empty! Add new relatives</string>
    <string name="person_sex_male">Male</string>
    <string name="person_sex_female">Female</string>
    <string name="person_sex">Sex:</string>
    <string name="person_sex_undefined">Undefined</string>
    <string name="no_information">No Information</string>
    <string name="birth_date_person">Date of Birth:</string>
    <string name="death_date_person">Date of Death:</string>
    <string name="person_comments">Comments</string>
    <string name="add_comment">Add comment</string>
    <string name="comment_add_success">Comment added successful! You will see it after refreshing</string>
    <string name="events_descripton">Events</string>
    <string name="ok">Close</string>
    <string name="empty_description">No description</string>
</resources>
