<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/cl_background">

    <Button
            android:text="@string/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogIn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" tools:text="@string/login_button" android:textSize="18sp"
            android:background="@drawable/rounded_button"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnExit" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" tools:text="@string/exit_button" android:textSize="18sp"
            android:background="@drawable/rounded_button" android:text="@string/exit_button"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etUsername"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/labelPassword"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/btnExit"/>
    <TextView
            android:text="@string/UsernameTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelUsername" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/etUsername" app:layout_constraintStart_toStartOf="@+id/etUsername"
            android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/PasswordTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelPassword" app:layout_constraintStart_toStartOf="@+id/etPassword"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/etPassword" android:textColor="@color/colorAccent"/>

    <cdflynn.android.library.checkview.CheckView
            android:id="@+id/check"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:checkView_strokeColor="@color/green"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar"
            tools:elevation="@dimen/materialize_spacing"
            android:elevation="@dimen/materialize_baseline_grid"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/gentree_circle"
            android:id="@+id/ivLogoSpin"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/labelUsername"
            android:layout_marginBottom="8dp"
            app:layout_constraintDimensionRatio="1:1"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            app:layout_constraintVertical_bias="0.7"
            android:elevation="@dimen/materialize_baseline_grid_small"/>
</android.support.constraint.ConstraintLayout>