<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="500dp"
            android:id="@+id/bottomGuideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvSiblings"
    />
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="200dp"
            android:id="@+id/topGuideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvSiblingsText"
    />
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topGuidlineMarriage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvMarriageText"
            app:layout_constraintGuide_end="403dp"
    />
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottomGuidelineMarriage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvMarriage"
            app:layout_constraintGuide_begin="500dp"/>
    <TextView
            android:text="@string/card_children"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvChildrenText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/card_parents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txParentsText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rvParents"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/card_siblings_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSiblingsText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/rvSiblings"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/topGuideline"/>
    <TextView
            android:text="@string/card_marriage_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMarriageText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rvMarriage"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/topGuidlineMarriage"
            android:layout_marginBottom="8dp"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvChildrenText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:id="@+id/rvChildren"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvSiblingsText"
            app:layout_constraintVertical_bias="0.0"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/rvParents"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSiblingsText"
            android:visibility="gone"
            app:layout_constraintVertical_bias="1.0"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/rvSiblings"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintTop_toBottomOf="@+id/tvSiblingsText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvMarriageText"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
    />
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuidelineMarriage"
            android:id="@+id/rvMarriage"
            app:layout_constraintTop_toBottomOf="@+id/tvMarriageText"
            app:layout_constraintStart_toEndOf="@+id/tvSiblingsText"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>