<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="340dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/iv_profile_pic"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/btnLogout"
            app:layout_constraintBottom_toTopOf="@+id/btnChangeAvatar"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsername"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChangeAvatar" app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/change_avatar"
            android:paddingStart="@dimen/materialize_baseline_grid"
            android:paddingEnd="@dimen/materialize_baseline_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnChangeAvatar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:background="@drawable/rounded_button_filled"
            android:textColor="@color/colorAfter" tools:text="@string/change_avatar" android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_pic" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tvUsername"/>
    <Button
            android:text="@string/logout"
            android:drawableStart="@drawable/ic_baseline_keyboard_arrow_left_24px"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/btnLogout"
            android:background="@drawable/rounded_button" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/iv_profile_pic" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.03" android:textSize="10sp"
    />
    <TextView
        android:text="@string/failed_load_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvErrorAvatar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/iv_profile_pic"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile_pic" android:visibility="gone"
        android:textSize="18sp" tools:text="@string/failed_load_avatar"/>
    <TextView
            android:text="@string/failed_load_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNoAvatar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_pic"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_pic" android:visibility="gone"
            android:textSize="18sp" tools:text="@string/failed_load_avatar"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/avatarProgressBar"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_pic"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_pic"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile_pic"
            app:layout_constraintStart_toStartOf="@+id/iv_profile_pic" android:visibility="visible"
            android:layout_marginEnd="6dp" android:layout_marginTop="3dp"/>
</android.support.constraint.ConstraintLayout>